--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.0",
+    "@mui/material": "^5.6.0",
+    "@mui/styled-engine-sc": "^5.5.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    
     "axios": "^0.21.1",
-    
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    
-    "react-router-dom": "^5.2.0",
-    
-    
+    "react-imask": "^6.2.2",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5",
-    
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
+    "styled-components": "^5.3.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
