--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.2",
+    "react-toastify": "^8.2.0",
     "redux": "^4.0.5",
     "styled-components": "^5.3.5",
     "web-vitals": "^1.0.1"
