--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "filepond": "^4.30.3",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-filepond": "^7.1.1",
     "react-imask": "^6.2.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.3.0",
