--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.11",
     "react": "^17.0.1",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.1",
     "react-filepond": "^7.1.1",
     "react-imask": "^6.2.2",
