--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "filepond": "^4.30.3",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.11",
+    "firebase": "^9.6.1",
     "react": "^17.0.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.1",
@@ -23,6 +24,8 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.2",
+    "react-select": "^5.2.2",
+    "react-table": "^7.7.0",
     "react-toastify": "^8.2.0",
     "redux": "^4.0.5",
     "styled-components": "^5.3.5",
