--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.11",
     "firebase": "^9.6.1",
+    "indian-cities-database": "^1.0.5",
     "react": "^17.0.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.1",
