--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-toastify": "^8.2.0",
     "redux": "^4.0.5",
     "styled-components": "^5.3.5",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "web3": "^1.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
